src/test/ui/coherence/impl[t]-foreign[fundamental[t]_local]-for-foreign.stderr
error[E0210]: type parameter `T` must be used as the type parameter for some local type (e.g., `MyStruct<T>`)
  --> $DIR/impl[t]-foreign[fundamental[t]_local]-for-foreign.rs:10:6
   |
LL | impl<T> Remote2<Box<T>, Local> for u32 {
   |      ^ type parameter `T` must be used as the type parameter for some local type
   |
   = note: only traits defined in the current crate can be implemented for a type parameter

error[E0210]: type parameter `T` must be used as the type parameter for some local type (e.g., `MyStruct<T>`)
  --> $DIR/impl[t]-foreign[fundamental[t]_local]-for-foreign.rs:14:10
   |
LL | impl<'a, T> Remote2<&'a T, Local> for u32 {
   |          ^ type parameter `T` must be used as the type parameter for some local type
   |
   = note: only traits defined in the current crate can be implemented for a type parameter

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0210`.
